Atualiza envio de e-mail com geração automática de token

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ asyncpg
 alembic
 psycopg2-binary
 botbuilder-core
-botbuilder-core
 botframework-connector
 aiohttp
 msrest
 python-dateutil
+requests
+python-dotenv
